src/HomeComponents/HomePage.css
.homepage-container-padding {
  padding: 5vh 7vw;
}

#intro-flex {
  display: flex;
  padding-top: none;
  margin-bottom: 55px;
  justify-content: space-between;
  position: relative;
}

#intro-right {
  position:absolute;
  bottom: 0;
  right: 0;
}

#matches-up-logo-intro {
  width: 200px;
  height: auto;
}

#what-is-matches-up-title {
  font-size: 50px;
  line-height: 50px;
}

#finally {
  font-size: 22px;
}

#finally-mobile {
  display: none;
}

#step-1-title, #step-2-title, #step-3-title, #step-4-title, #step-5-title {
  font-weight: 700;
  font-size: 40px;
  line-height: 40px;
  margin: 0;
}

.steps-flex-container {
  height: 90px;
  display: flex;
  align-items: center;
}

.flex-end {
  justify-content: flex-end;
}

.right-steps-icon {
  height: 60px;
  width: auto;
  padding-left: 30px;
}

.left-steps-icon {
  height: 60px;
  width: auto;
  padding-right: 30px;
}

#for-people {
  margin-top: 10px;
  line-height: inherit;
}

#to-cover-cost {
  box-sizing: content-box;
  padding-bottom: 5%
}

#donation-info-link{
  text-decoration: underline;
  color: #1e365c;
}

#donation-info-link:hover {
  color: #E9482B;
}

#donation-waived-stamp {
  box-sizing: border-box;
  position: relative;
  width: 250px;
  margin-top: -10%;
  margin-left: 55%;
  transform: rotate(-8deg);
  border: 8px #E9482B;
  border-style: double;
  box-shadow: 0 0 0 1px #E9482B, 0 0 0 1px #E9482B inset;
  letter-spacing: 4px;
  background: rgba(255, 255, 255, 0.5);
}

#create-acc-and-start-now-div {
  display: flex;
  flex-wrap: wrap;
  margin: 0;
}

#create-ff-txt {
  margin: auto 0;;
}

#start-now-and-few-words-div {
  margin-left: 2%;
  padding-top: 2%;
  text-align: center;
}

#start-now-btn {
  width: 220px;
  height: 50px;
  font-size: 22px;
  border: 1px solid #E9482B;
  box-sizing: border-box;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
}

#a-few-words-link:hover {
  text-decoration: underline;
  color:#E9482B;
}

#step-2-mobile-flex, #step-4-mobile-flex {
  display: none;
}

#step-2-content {
  box-sizing: border-box;
  width: 834px;
  margin-left: auto;
  margin-right: 0;
}

#resources {
  box-sizing: border-box;
  margin: auto;
}

#resources-btn {
  margin-top: 20px;
  width: 220px;
  height: 50px;
  font-size: 22px;
  border: 1px solid #E9482B;
  box-sizing: border-box;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
}

#links-in-a-few-words {
  line-height: inherit;
}

#single-communities-form {
  display: flex;
  margin-top: 20px;
  align-items: center;
}

#single-communities-input {
  width: 300px;
  height: 55px;
  background: linear-gradient(0deg, #FFFBFB, #FFFBFB), #FFFBFB;
  border: 1px solid #FFFBFB;
  box-sizing: border-box;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
  font-size: 20px;
}

#single-communities-input:focus {
  outline: #fad4cd;
}

#single-communities-form-submit-btn {
  width: 150px;
  height: 50px;
  border: none;
  border-radius: 25px;
  box-sizing: border-box;
  letter-spacing: 2px;
  line-height: 50px;
  margin-left: 20px;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
  text-align: center;
}

#single-communities-form-submit-btn:hover {
  background-color: #E9482B;
  color: #1e365c;
}

#send-us-an-email-btn {
  width: 250px;
  height: 60px;
  background: linear-gradient(0deg, #FFFBFB, #FFFBFB), #FFFBFB;
  border: 1px solid #FFFBFB;
  box-sizing: border-box;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
  font-size: 20px;
  margin: 30px auto;
}

#send-us-an-email-btn:focus {
  background-color: #E9482B;
}

/* 1024px */
@media (max-width: 1024px) {
  #intro-flex {
    flex-direction: column;
  }

  #intro-left {
    display: block;
    box-sizing: border-box;
    width: 100%;
    text-align: center;
  }

  #matches-up-logo-intro {
    width: 250px;
    height: auto;
    display: block;
    margin: auto;
  }

  #intro-right {
    margin: 0;
    position: relative;
    display: block;
    box-sizing: border-box;
    width: 100%;
    text-align: center;
    padding-top: 5%;
  }
  
  #what-is-matches-up-title {
    display: block;
    display: block;
    width: 100%;
    font-size: 40px;
    line-height: 40px;
  }
  
  #finally {
    font-size: 25px;
    text-align: center;
  }

  #donation-waived-stamp {
    box-sizing: border-box;
    position: relative;
    width: 250px;
    margin-top: -4%;
    margin-left: 40%;
    transform: rotate(-6deg);
    border: 8px #E9482B;
    border-style: double;
    box-shadow: 0 0 0 1px #E9482B, 0 0 0 1px #E9482B inset;
    letter-spacing: 4px;
    background: rgba(255, 255, 255, 0.5);
  }

  #start-now-and-few-words-div {
    padding-top: 4%;
    text-align: center;
    margin: 0 20px;
  }

  #single-communities {
    text-align: left;
  }
}

@media(max-width: 950px) {
  #step-2-mobile-flex, #step-4-mobile-flex {
    display: flex;
  }

  #step-2-desktop-flex, #step-4-desktop-flex {
    display: none;
  }
  
  #step-2-one-liner, #step-4-one-liner {
    text-align: left;
  }
  
  #step-2-content {
    box-sizing: content-box;
    width: auto;
  }

  #step-4-content {
    text-align: left;
  }

}


/* 720px */
@media (max-width: 720px) {
  .homepage-container-padding-font {
    font-size: 16px;
  }

  #intro-flex {
    margin-bottom: 2%;
  }

  #matches-up-logo-intro {
    width: 50%;
  }

  #what-is-matches-up-title {
    font-size: 25px;
    line-height: 25px;
  }
  
  #finally-mobile {
    display: block;
    font-size: 16px;
    padding-bottom: 15px;
  }
  
  #finally {
    display: none;
  }

  #donation-waived-stamp {
    width: 180px;
    margin-top: -13%;
    margin-left: 20%;
    border: 4px #E9482B;
    letter-spacing: 2px;
  }

  .steps-flex-container {
    height: 35px;
    align-items: center;
    margin-bottom: 5px;
  }

  #step-1-title, #step-2-title, #step-3-title, #step-4-title, #step-5-title, #a-few-words-title {
    font-weight: 700;
    font-size: 22px;
    line-height: 22px;
    text-align: left;
  }

  .left-steps-icon {
    height: 30px;
    width: auto;
    padding-right: 10px;
  }

  .right-steps-icon {
    height: 30px;
    width: auto;
    padding-left: 10px;
  }

  #create-acc-and-start-now-div {
    display: block;
  }
  
  #create-ff-txt, #create-gsc-txt {
    text-align: center;
  }

  #start-now-btn {
    width: 130px;
    height: 40px;
    font-size: 16px;
    border: 1px solid #E9482B;
    box-sizing: border-box;
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
  }

  #a-few-words-link {
    font-size: 9px;
    text-decoration: underline;
  }

  #resources-btn {
    width: 120px;
    height: 30px;
    font-size: 14px;
    line-height: 30px;
  }

  #currently-unavailable {
    font-size: 12px;
  }

  #a-few-words-title {
    font-size: 18px;
  }

  #single-communities-input {
    width: 160px;
    height: 30px;
  }
  
  #single-communities-form-submit-btn {
    width: 80px;
    height: 30px;
    line-height: 30px;
    margin-left: 5px;
    font-size: 12px;
  }

  #alert-div {
    text-align: left;
  }

  #have-a-question {
    font-size: 22px;
    margin: 0;
  }

  #send-us-an-email-btn {
    width: 180px;
    height: 30px;
    font-size: 14px;
  }
}

